fix: vertical align

--- a/css/index.scss
+++ b/css/index.scss
@@ -160,6 +160,7 @@ section{
             & td, & th{
                 padding: 5px;
                 text-align: center;
+                vertical-align: middle;
             }
 
             & .text-left{
